피드백 수정